@@ -1,3 +1,7 @@
+2010-10-08  Jean-Louis Martineau <martineau@zmanda.com>
+	* device-src/s3-device.c: Don't give an error is ssl_ca_info is set
+	  and ssl is not used.
+
 2010-10-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/client_util.c: Use property_add_to_argv.
 	* client-src/client_util.h (application_property_argv_size):
